added an empty anchor tag and indented the code

--- a/courier.html
+++ b/courier.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<head>
- courier
-</head>
-   <title> courier management website </title>
-<body>
-	<a href ="" target=_blank>click me</a>
-</body>
+<html>
+      <head>courier</head>
+      <title> courier management website </title>
+   <body>
+	   <a href ="" target=_blank>click me</a>
+   </body>
 </html>
 
